...
                                        <rect key="frame" x="140.5" y="135" width="93" height="40"/>
                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="40" id="e4i-jI-FJA"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
                                        <state key="normal" title="Get Started">
                                            <color key="titleColor" red="0.07167312671224764" green="0.25894273477157359" blue="0.1024318676740595" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                        </state>
                                        <connections>
                                            <segue destination="lG6-5P-keG" kind="presentation" modalPresentationStyle="fullScreen" id="5Yh-XR-TIP"/>
                                        </connections>
                                    </button>
...
                            <constraint firstItem="C4j-3O-R2m" firstAttribute="leading" secondItem="be5-La-ie5" secondAttribute="leading" constant="20" id="yrX-fV-yX8"/>
                            <constraint firstItem="C4j-3O-R2m" firstAttribute="top" secondItem="e3g-1W-KM9" secondAttribute="bottom" constant="50" id="zxC-R7-7as"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="be5-La-ie5"/>
                    </view>
                    <toolbarItems/>
                    <navigationItem key="navigationItem" title="Add A Plant" largeTitleDisplayMode="always" id="Kf5-eW-tek">
                        <barButtonItem key="backBarButtonItem" title="Cancel" id="hRg-IW-25g"/>
                        <barButtonItem key="rightBarButtonItem" systemItem="save" id="0Ti-gv-je4">
                            <connections>
                                <action selector="savePlantButton:" destination="nTF-9d-Lht" id="SF4-B4-xsn"/>
                            </connections>
                        </barButtonItem>
...
                            <constraint firstItem="FZz-GR-oG7" firstAttribute="trailing" secondItem="3iF-7J-xYp" secondAttribute="trailing" constant="20" id="UMA-Do-I2I"/>
                            <constraint firstItem="3iF-7J-xYp" firstAttribute="leading" secondItem="FZz-GR-oG7" secondAttribute="leading" constant="20" id="YrO-n3-6XG"/>
                            <constraint firstItem="3iF-7J-xYp" firstAttribute="top" secondItem="FZz-GR-oG7" secondAttribute="top" constant="200" id="g8g-iG-eQu"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="FZz-GR-oG7"/>
                    </view>
                    <navigationItem key="navigationItem" title="My Profile" id="c4Y-6D-ryC">
                        <barButtonItem key="rightBarButtonItem" systemItem="edit" id="pY2-Gf-vtC"/>
                    </navigationItem>
                    <connections>
                        <outlet property="phoneNumberTextField" destination="v6G-ST-Agk" id="hiC-LI-BMH"/>
                        <outlet property="userNameTextField" destination="B7L-Mr-qXR" id="Xqm-nj-1wL"/>
                    </connections>
...
                        </prototypes>
                        <connections>
                            <outlet property="dataSource" destination="amG-ko-e0Z" id="MWb-Fh-hlS"/>
                            <outlet property="delegate" destination="amG-ko-e0Z" id="c33-fB-5jk"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="My Plants" id="btv-Gx-WvW">
                        <barButtonItem key="leftBarButtonItem" title="My Profile" id="KNJ-du-QQx">
                            <connections>
                                <segue destination="xzc-6b-dhM" kind="show" identifier="MyProfileShowSegue" id="arT-s3-E7K"/>
                            </connections>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="kuW-9d-uMj">
...
